--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "AI-VL-OCR",
+    "name": "superforu-ai-ocr",
     "version": "0.1.0",
     "private": true,
-    "description": "AI VL OCR",
+    "description": "Superforu AI OCR",
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
