--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,8 @@
 # STORAGE
 STORAGE_PATH=/Users/user/Desktop/Github/ai-vl-ocr/output
 
+# Model from MODELSCOPE
+AI_VL_MODEL = Qwen/Qwen2-VL-7B-Instruct
 
 
 
