--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
         "clipboard": "^2.0.11",
         "core-js": "^3.8.3",
         "element-ui": "^2.15.14",
-        "vue": "^2.6.14"
+        "vue": "^2.6.14",
+        "vue-markdown": "^2.2.4"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
