--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,10 @@ chardet==5.2.0
 transformers==4.46.3
 PyMuPDF==1.24.14
 accelerate>=0.26.0
+
+# phi-3.5-version
+flash_attn==2.5.8
+numpy==1.24.4
+Pillow==10.3.0
+Requests==2.31.0
+transformers==4.40.2
